Add inputs and main controller

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
+[env:cv2midi]
 platform = teensy
 board = teensy41
 framework = arduino
@@ -17,3 +17,4 @@ build_unflags = -std=gnu++11
 build_flags = -std=c++17 -I./src
 lib_deps = 
 	https://github.com/pigatron-industries/arduino_eurorack.git
+	SPI
