--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:cv2midi]
+[env:xen_cv2midi]
 platform = teensy
 board = teensy41
 framework = arduino
